--- a/cv/media/devin-print.css
+++ b/cv/media/devin-print.css
@@ -135,7 +135,7 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #a00;
+	color: rgb(0, 3, 170);
 	margin-top: 2em;
 	position: relative;
 	top: 1.2em;
