--- a/cv/media/devin-screen.css
+++ b/cv/media/devin-screen.css
@@ -140,7 +140,7 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #bc412b;
+	color: rgb(0, 3, 170);
 	margin-top: 3em;
 	position: relative;
 	top: 1.4em;
